# lamb-gine

./: CMakeLists.txt  CMakeSettings.json
lamb-gine/: CMakeLists.txt  Lamb-gine.cpp  Math.h
