# CMakeList.txt : CMake project for Lamb-gine, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Lamb-gine "Lamb-gine.cpp"  "Math.h" "Math.cpp")

# TODO: Add tests and install targets if needed.
